multistrap (2.1.6) unstable; urgency=low

  * [INTL:fr] French manpage translation update (Closes: #584679)
  * Allow check-deps.sh to proceed when detecting errors.
  * Avoid unitialised Priority value.
  * Call dpkg --print-architecture for determination of host
    architecture. (Closes: #589713)
  * Add aptitude to crosschroot configs as pbuilder now requires it.

 -- Neil Williams <codehelp@debian.org>  Mon, 26 Jul 2010 22:53:39 +0100

multistrap (2.1.5) unstable; urgency=low

  * [INTL:pt] Updated Portuguese program output translation
    (Closes: #581251)
  * [INTL:da] Danish translation of multistrap program
    (Closes: #581496)
  * [INTL:pt] Updated Portuguese translation for manpage messages
    (Closes: #581673)
  * [INTL:fr] French program output translation (Closes: #582059)
  * Add support for omitdebsrc and change suite behaviour to be non-
    default, usable by selecting explicitsuite to true.
  * When moving downloaded packages to a sourcedir, also download the
    source packages for GPL compliance.
  * Handle fakeroot with native architectures.
  * Extend device table format to support creating symlinks and
    hardlinks.

 -- Neil Williams <codehelp@debian.org>  Mon, 31 May 2010 20:15:56 +0100

multistrap (2.1.4) unstable; urgency=low

  * Add support for configurable single cross-toolchains in
    the chroot - using the dpkg-cross default_arch, if any.
  * Clarify documentation of bootstrap and aptsources sections
    (Closes: #579626)
  * Clarify error reporting in the --simulate option, warn if
    sections are not defined. (Closes: #579627)
  * [INTL:vi] Vietnamese program translation update (Closes: #580623)
  * Report parsing errors in config files (Closes: #580687)
  * Move from experimental into unstable. 

 -- Neil Williams <codehelp@debian.org>  Sat, 08 May 2010 11:38:58 +0100

multistrap (2.1.3) experimental; urgency=low

  * Fix armel.conf to specify the right sources.
