@@ -6,8 +6,9 @@ multistrap (2.1.6) unstable; urgency=low
   * Call dpkg --print-architecture for determination of host
     architecture. (Closes: #589713)
   * Add aptitude to crosschroot configs as pbuilder now requires it.
+  * Allow check-deps.sh to detect | dependencies.
 
- -- Neil Williams <codehelp@debian.org>  Mon, 26 Jul 2010 22:53:39 +0100
+ -- Neil Williams <codehelp@debian.org>  Wed, 28 Jul 2010 19:30:25 +0100
 
 multistrap (2.1.5) unstable; urgency=low
 
